apps/sonarr/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: linuxserver/sonarr:3.0.9
        imagePullPolicy: IfNotPresent
        name: sonarr
        ports:
        - containerPort: 8989
          protocol: TCP
        volumeMounts:
        - mountPath: /downloads
          name: downloads
        - mountPath: /tv
          name: tv
        - mountPath: /config
          name: sonarr-config
      restartPolicy: Always
      volumes:
      - name: downloads
        nfs:
          server: 192.168.1.35
          path: /Media/Downloads-Bluey
      - name: tv
        nfs:
          server: 192.168.1.35
          path: /Media/TV
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
