apps/sonarr/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
  - name: web
    port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
